# mdbook_uplot

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  area-charts.html  bar-charts.html  build.rs  cliff.toml  customization.html  dist-workspace.toml  index.html  installation.html  line-charts.html  mise.toml  print.html  release-plz.toml  scatter-charts.html  searcher-c2a407aa.js  searchindex-cc75be9f.js  toc-c260689e.js  toc.html  typos.toml  usage.html
.github/workflows/: audit.yml  ci.yml  docs.yml  release-plz.yml  release.yml
assets/: uplot-charts.js  uplot-init.js
assets/uplot/: uplot-bars-e87c9b6f.js  uplot-charts-e4c6f506.css  uplot-init-e964ccf8.js
book/: book.toml
book/assets/uplot/: uplot-bars.js  uplot-charts.css
book/src/: README.md  SUMMARY.md  area-charts.md  bar-charts.md  customization.md  installation.md  line-charts.md  scatter-charts.md  usage.md
public/: changelog.rss  index.html
public/changelog/: index.html
src/: lib.rs
