[package]
name = "mdbook_uplot"
version = "0.2.0"
edition = "2024"
description = "mdbook preprocessor for interactive uPlot charts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/n1ght-hunter/mdbook_uplot"

[dependencies]
maud = "0.27.0"
mdbook-preprocessor = "0.5.2"
pulldown-cmark = "0.13.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.23.9"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
ureq = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
